# fanout-openrouter

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  fanout_policies.json  justfile  pyproject.toml  test_ci.sh  test_stream.py
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml
docs/: policies.md
fanout_openrouter/: app.py  logging.py  models.py  openrouter_client.py  orchestrator.py  policy.py  settings.py
tests/: conftest.py  test_app.py  test_live_openrouter.py  test_opencode_smoke.py  test_orchestrator.py  test_orchestrator_edge_cases.py  test_orchestrator_tool_calls.py  test_parity.py  test_rate_limiter.py  test_settings.py
